--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "react-router-dom": "5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
